--- a/index.html
+++ b/index.html
@@ -9,34 +9,29 @@
             background-attachment: fixed;
             background-size: cover;
         }
-        input[type=submit]{
-        background-color: #4255d4;
-        border: none;
-        color: white;
-        padding: 16px 32px;
-        text-decoration: none;
-        
-        margin: 4px 2px;
-        cursor: pointer;
-        }
+
     </style>
     
 </head>
 <body>
 
     <div align="center"> 
-        <form action="/action_page.php">
+        <form >
             <label for="date" style="font-size:50pt;color: white;">Your Birthday:</label>
             <br>
             <input style="background-color: #e7ec58;height:50px;width:250px;font-size:14pt;text-align: center;" type="date" id="date_input" name="date" value="type here">
             <br>
             <br>
-            <input style="height:50px;width:120px;font-size:14pt;text-align: center;" type="submit" onclick="dummy()">
+           <!---- <input style="height:50px;width:120px;font-size:14pt;text-align: center;" type="button" onclick="dummy()">-->
+           <button type="button" style="background-color: #5dec58; height:50px;width:120px;font-size:14pt;text-align: center;" onclick="dummy()">Click Me!</button>
         </form> 
+        <br><br><br>
+        <p id="example"> </p>
         <script>
         function dummy() {
-           let xyz = document.getElementById("date_input").innerHTML
-        alert(xyz) 
+        //   let xyz = document.getElementById("date_input").innerHTML
+        //alert(xyz) 
+        document.getElementById("example").innerHTML="<p style=\"font-size:20pt;color: white;\"> Mr._______ was born on your birthday too! <p>"
         }
         </script>
     </div>
