--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
         </form> 
         <br><br><br>
         <p id="example"> </p>
-        <script>
-        function dummy() {
-        //   let xyz = document.getElementById("date_input").innerHTML
-        //alert(xyz) 
-        document.getElementById("example").innerHTML="<p style=\"font-size:20pt;color: white;\"> Mr._______ was born on your birthday too! <p>"
-        }
-        </script>
+        
+        <script src="birthday_indexer.js"></script>
+       
     </div>
 </body>
 </html>
